@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form>
+    <label name="parent"/>
+    <field name="parent" colspan="3"/>
+    <label name="account"/>
+    <field name="account"/>
+    <label name="ratio"/>
+    <group col="2" id="ratio">
+        <field name="ratio" factor="100" xexpand="0"/>
+        <label name="ratio" string="%" xalign="0.0" xexpand="1"/>
+    </group>
+</form>
