@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree editable="bottom">
+    <field name="parent"/>
+    <field name="account"/>
+    <field name="ratio" factor="100">
+        <suffix string="%" name="ratio"/>
+    </field>
+</tree>
